# DockerManager

./: setup.cfg
src/austin_heller_repo/: docker_manager.py
src/docker_manager_austinhellerrepo.egg-info/: PKG-INFO  SOURCES.txt
test/: docker_manager_test.py
test/dockerfiles/contains_script/: Dockerfile
test/dockerfiles/multiple_stdout/: Dockerfile
test/dockerfiles/print_every_second_for_ten_seconds/: Dockerfile
test/dockerfiles/spawns_container/: Dockerfile
test/dockerfiles/waits_five_seconds/: Dockerfile
